add --illegal-access=permit to Docker image